@@ -21,9 +21,9 @@ $scalar = -1;
 
 is $scalar, -1, "shared var has original value before event start" ;
 
-my $e = $mod->new(1, \&perform);
+my $e = $mod->new(0.2, \&perform);
 $e->start;
-sleep 1;
+select(undef, undef, undef, 0.4);
 $e->stop;
 
 is $scalar, 99, "shared var has updated value after event start" ;
