@@ -8,7 +8,7 @@ my $mod = 'Async::Event::Interval';
 
 # Test timed interval
 
-my $e = $mod->new(1, \&perform);
+my $e = $mod->new(0.2, \&perform);
 
 my $x = $e->shared_scalar;
 $$x = 0;
@@ -17,7 +17,7 @@ is $$x, 0, "baseline var ok";
 
 $e->start;
 
-sleep 2;
+select(undef, undef, undef, 0.6);
 
 is $$x >= 20, 1, "event is async and correct";
 
