@@ -12,16 +12,22 @@ my $e = $mod->new(1, \&perform, 10);
 
     $e->start;
     is $e->status > 0, 1, "started ok";
+    is $e->error, 0, "no error ok";
 
     sleep 3;
-    is $e->status, -1, "after a crash, status returns -1";
+
+    is $e->status, 0, "after a crash, status returns 0";
+    is $e->error, 1, "after a crash, error returns 1";
 
     $e->restart;
+
     is $e->status > 0, 1, "restarted ok";
+    is $e->error, 0, "no error ok";
 
     sleep 3;
-    is $e->status, -1, "after a crash, status returns -1";
 
+    is $e->status, 0, "after a crash, status returns 0";
+    is $e->error, 1, "after a crash, error returns 1";
 }
 
 sub perform {
